--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "axios": "^1.9.0",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
   },
@@ -24,7 +25,7 @@
     "unplugin-fonts": "^1.3.1",
     "unplugin-vue-components": "^28.4.1",
     "unplugin-vue-router": "^0.12.0",
-    "vite": "^6.2.2",
+    "vite": "^6.3.5",
     "vite-plugin-vuetify": "^2.1.1",
     "vue-router": "^4.5.0"
   },
