--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/vue3": "^6.1.17",
     "@mdi/font": "7.4.47",
     "axios": "^1.9.0",
+    "chart.js": "^2.7.3",
     "smoothie": "^1.36.1",
     "vue": "^3.5.13",
+    "vue-chartjs": "^3.1.1",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
