--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/vue3": "^6.1.17",
     "@mdi/font": "7.4.47",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "smoothie": "^1.36.1",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
